@@ -283,6 +283,90 @@ log4j.appender.isy99-file.MaxBackupIndex = 1
 log4j.appender.isy99-file.layout = org.apache.log4j.PatternLayout
 log4j.appender.isy99-file.layout.ConversionPattern = %p %d (ISY-99): %m%n
 
+
+# ---------------------------------------------------------------------------------------------
+#
+#  TELNET LOGGING
+#
+#  Direct telnet related logging to their own category. Telnet logging is separated to the usual
+#  operational log that records some user-related telnet events and a more detailed telnet debug
+#  log that records additional troubleshooting information about the telnet protocol.
+#
+#  The debug log is by default set to low file size values with the assumption that the debug
+#  log is not required under normal circumstances. If you do need to analyze the debug log,
+#  you are likely to need to increase the log sizes first to retrieve sufficient information over
+#  a longer period of time.
+#
+#  Note on performance : debug log does have an impact on performance, however under usual
+#  circumstances this is not an issue. However, if you are sending very frequent telnet commands
+#  and need to optimize performance, turning off the telnet debug logging or all of the
+#  telnet logging altogether may help with performance optimization.
+#
+# ---------------------------------------------------------------------------------------------
+
+
+# Enable all of telnet logging -- file log appenders may threshold which records they
+# want to include
+log4j.logger.OpenRemote.Controller.protocol.telnet = ALL, telnet-file, telnet-debug-file
+
+
+# ---- TELNET FILE LOG ----------------------------------------------------------------------------
+
+# Log file will roll over (delete) old entries once maximum number of backup files
+# is reached (each file size is defined with MaxFileSize property)
+log4j.appender.telnet-file = org.apache.log4j.RollingFileAppender
+
+# Location of the log file
+log4j.appender.telnet-file.File = ../logs/telnet/telnet.log
+
+# Only log INFO or above. Detailed debug messages are in a separate debug log file
+log4j.appender.telnet-file.Threshold = INFO
+
+# Maximum size of the log file
+log4j.appender.telnet-file.MaxFileSize = 500KB
+
+# Keep at most one backup file until older entries are deleted and written over.
+log4j.appender.telnet-file.MaxBackupIndex = 1
+
+# Formatting of log records -- print priority (level) %p, date/time %d and message %m
+log4j.appender.telnet-file.layout = org.apache.log4j.PatternLayout
+log4j.appender.telnet-file.layout.ConversionPattern = %p %d (Telnet): %m%n
+
+
+# ---- TELNET DEBUG LOG ---------------------------------------------------------------------------
+
+# Log file will roll over (delete) old entries once  maximum number of backup files
+# is reached (each file size is defined with MaxFileSize property). Both the size and
+# number of backups is set rather low for debug logging by default (see values below).
+# If you're tracking down an issue with the telnet implementation, you will want to increase
+# these values.
+log4j.appender.telnet-debug-file = org.apache.log4j.RollingFileAppender
+
+# Location of the log file
+log4j.appender.telnet-debug-file.File = ../logs/telnet/telnet-debug.log
+
+# Logs *everything* related to telnet.
+log4j.appender.telnet-debug-file.Threshold = ALL
+
+# Maximum size of the log file -- by default this is relatively low compared to the amount
+# of logging that may occur at debug level. If you're debugging an issue, you will want to
+# increase this file size limit and add a number of backup log files (see below) to ensure
+# older log files are not deleted and written over.
+log4j.appender.telnet-debug-file.MaxFileSize = 100KB
+
+# By default, do not keep backup logs. This means that as soon as the max file size is reached
+# on the debug log, it is deleted and new empty log is created to replace it.
+#
+# If you're debugging an issue, you will want to increase both the file size and the number of
+# backup files as the debug logging can be quite noisy.
+log4j.appender.telnet-debug-file.MaxBackupIndex = 0
+
+# Formatting of log records -- print priority (level) %p, date/time %d and message %m
+log4j.appender.telnet-debug-file.layout = org.apache.log4j.PatternLayout
+log4j.appender.telnet-debug-file.layout.ConversionPattern = %p %d (Telnet): %m%n
+
+
+
 # ---------------------------------------------------------------------------------------------
 #
 #  PANSTAMP LAGARTO LOGGING
